Add Speaker Details
	modified:   Bot Application1/Bot Application1/Bot Application1.csproj
	new file:   Bot Application1/Bot Application1/Cards/UserInfoCard.cs
	modified:   Bot Application1/Bot Application1/Controllers/MessagesController.cs
	new file:   Bot Application1/Bot Application1/Data/ConferenceApi.cs
	new file:   Bot Application1/Bot Application1/Data/ConferenceData.cs

--- a/Bot Application1/Bot Application1/Bot Application1.csproj
+++ b/Bot Application1/Bot Application1/Bot Application1.csproj
@@ -111,7 +111,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cards\UserInfoCard.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Data\ConferenceData.cs" />
+    <Compile Include="Data\ConferenceApi.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Dialogs\RootDialog.cs" />
     <Compile Include="Global.asax.cs">
