--- a/Bot Application1/Bot Application1/Bot Application1.csproj
+++ b/Bot Application1/Bot Application1/Bot Application1.csproj
@@ -116,8 +116,10 @@
     <Compile Include="Data\ConferenceData.cs" />
     <Compile Include="Data\ConferenceApi.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
+    <Compile Include="Dialogs\ConferenceSearch.cs" />
     <Compile Include="Dialogs\ConferenceDetailsDialog.cs" />
     <Compile Include="Dialogs\RootDialog.cs" />
+    <Compile Include="Dialogs\ConferenceSearchDialog.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
